tried to fix horizontal scroll again

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -6,6 +6,7 @@ body {
     overflow-x: hidden;
     margin: 0; /*need these for when background image is inside div to remove the gap*/
     padding: 0;
+    position: relative;
 
     background-image: url("../images/Curve_Line.svg");
     background-repeat: no-repeat;
